Project

General

Profile

Actions

Bug #11025

closed

Disabling SMB server service does not change the sharestate of a smb share to offline

Added by Gordon Ross over 4 years ago. Updated over 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
-
Start date:
2019-05-15
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

Create an SMB share
disable the SMB service
share state should change to offline
enable the SMB service
share state should go back to online

Actions #1

Updated by Gordon Ross over 4 years ago

  • Description updated (diff)

Tested per description
Fix in production since mid 2017

Actions #2

Updated by Electric Monk over 4 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit c7bda7648c4308e1a77e2535de357af9f86236aa

commit  c7bda7648c4308e1a77e2535de357af9f86236aa
Author: Evan Layton <evan.layton@nexenta.com>
Date:   2019-08-10T14:05:34.000Z

    11025 Disabling SMB server service does not change the sharestate of a smb share to offline
    Reviewed by: Gordon Ross <gordon.ross@nexenta.com>
    Reviewed by: Rob Gittins <rob.gittins@nexenta.com>
    Approved by: Garrett D'Amore <garrett@damore.org>

Actions

Also available in: Atom PDF